--- a/myProj/myProj.csproj
+++ b/myProj/myProj.csproj
@@ -132,6 +132,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202409291936414_Create.cs" />
+    <Compile Include="Migrations\202409291936414_Create.designer.cs">
+      <DependentUpon>202409291936414_Create.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Companies.cs" />
     <Compile Include="Models\CompaniesBranches.cs" />
     <Compile Include="Models\ComContext.cs" />
@@ -191,6 +196,11 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202409291936414_Create.resx">
+      <DependentUpon>202409291936414_Create.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
